--- a/week2/index.html
+++ b/week2/index.html
@@ -3,21 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>week1Assignment</title>
+    <title>Daily Panda</title>
 </head>
 <body>
- 
-<pre>
-    _                                    _     _            ___                                
-   | |                               _  | |   (_)          / __)                               
-   | |    ____ ___  ____  _   _    _| |_| |__  _  ___    _| |__ ____ ___  ____                 
-   | |   / ___) _ \|  _ \| | | |  (_   _)  _ \| |/___)  (_   __) ___) _ \|    \                
-   | |  ( (__| |_| | |_| | |_| |    | |_| | | | |___ |    | | | |  | |_| | | | |   _    _    _ 
-   |_|   \____)___/|  __/ \__  |     \__)_| |_|_(___/     |_| |_|   \___/|_|_|_|  (_)  (_)  (_)
-                   |_|   (____/                                                                
-   
-</pre>
-    
-<p><a href="http://patorjk.com/software/taag" target="_blank">Here</a> is the website I uesd to generate this content.</p>
+    <h1>Hello, World!</h1>
+    <p>Lorem ipsum dolor <a href="https://mainichi-panda.jp/418087.html">sit amet consectetur adipisicing</a> elit. Sint accusantium eius culpa quaerat quo dolore debitis quis odit quidem doloribus, libero iste labore odio velit quas, porro modi aut fugit.</p>
+    <img src="xiangxiang.jpg" alt="image of the panda xiangxiang"/>
 </body>
 </html>
