--- a/week2/index.html
+++ b/week2/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Panda</title>
+    <style>
+        body{
+            color: blue;
+        background-color: lightpink;
+        }
+        p{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a{
+            text-decoration: :none;
+            color:blue;
+        }
+        
+    </style>
 </head>
 <body>
     <h1>Hello, World!</h1>
     <p>Lorem ipsum dolor <a href="https://mainichi-panda.jp/418087.html">sit amet consectetur adipisicing</a> elit. Sint accusantium eius culpa quaerat quo dolore debitis quis odit quidem doloribus, libero iste labore odio velit quas, porro modi aut fugit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae nostrum unde pariatur, nobis odio illum esse repudiandae corrupti impedit, dolorem iusto maiores id optio. Placeat odit ipsam iste at!</p>
     <img src="xiangxiang.jpg" alt="image of the panda xiangxiang"/>
 </body>
 </html>
