--- a/week2/index.html
+++ b/week2/index.html
@@ -9,8 +9,11 @@
             color: blue;
         background-color: lightpink;
         }
-        p{
+        p.p-sans{
             font-family: Arial, Helvetica, sans-serif;
+        }
+        p{
+            font-family: 'Times New Roman', Times, serif;
         }
 
         a{
@@ -22,7 +25,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>Lorem ipsum dolor <a href="https://mainichi-panda.jp/418087.html">sit amet consectetur adipisicing</a> elit. Sint accusantium eius culpa quaerat quo dolore debitis quis odit quidem doloribus, libero iste labore odio velit quas, porro modi aut fugit.</p>
+    <p class="p-sans">Lorem ipsum dolor <a href="https://mainichi-panda.jp/418087.html">sit amet consectetur adipisicing</a> elit. Sint accusantium eius culpa quaerat quo dolore debitis quis odit quidem doloribus, libero iste labore odio velit quas, porro modi aut fugit.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae nostrum unde pariatur, nobis odio illum esse repudiandae corrupti impedit, dolorem iusto maiores id optio. Placeat odit ipsam iste at!</p>
     <img src="xiangxiang.jpg" alt="image of the panda xiangxiang"/>
 </body>
