--- a/week2/index.html
+++ b/week2/index.html
@@ -12,6 +12,10 @@
         p.p-sans{
             font-family: Arial, Helvetica, sans-serif;
         }
+        .p-lead{
+            font-size: 20px;
+            color: darkgray;
+        }
         p{
             font-family: 'Times New Roman', Times, serif;
         }
