--- a/week2/index.html
+++ b/week2/index.html
@@ -6,7 +6,7 @@
     <title>Daily Panda</title>
     <style>
         body{
-            color: blue;
+            color: rgb(19, 151, 111);
         background-color: lightpink;
         }
         p.p-sans{
@@ -21,8 +21,11 @@
         }
 
         a{
-            text-decoration: :none;
-            color:blue;
+            text-decoration: none;
+            color:rgb(19, 151, 111);
+        }
+        img{
+            max-width: 100%;
         }
         
     </style>
