--- a/week2/index.html
+++ b/week2/index.html
@@ -9,7 +9,7 @@
             color: rgb(19, 151, 111);
         background-color: lightpink;
         }
-        p.p-sans{
+        .p-sans{
             font-family: Arial, Helvetica, sans-serif;
         }
         .p-lead{
