--- a/week2/index.html
+++ b/week2/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Panda</title>
-    <style>
+    <!-- STYLES BELOW: -->
+     <link rel="stylesheet" href="style.css"
+    <!-- <style>
         body{
             color: rgb(19, 151, 111);
         background-color: lightpink;
@@ -28,7 +30,7 @@
             max-width: 100%;
         }
         
-    </style>
+    </style> -->
 </head>
 <body>
     <header>
