--- a/week2/index.html
+++ b/week2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Panda</title>
     <!-- STYLES BELOW: -->
-     <link rel="stylesheet" href="style.css"
+     <link rel="stylesheet" href="style.css">
     <!-- <style>
         body{
             color: rgb(19, 151, 111);
