--- a/week2/index.html
+++ b/week2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Panda</title>
+    <title>Hello Panda</title>
     <!-- STYLES BELOW: -->
      <link rel="stylesheet" href="style.css">
     <!-- <style>
@@ -36,22 +36,34 @@
     <header>
          <nav>
              <ul>
-                 <li><a href="index.html">Home</a></li>
-                 <li><a href="aboout.html">About</a></li>
-                 <li><a href="contact.html">Contact</a></li>
+                 <li><a href="#home">Home</a></li>
+                 <li><a href="#about">About</a></li>
+                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
 
-    </main>
-    <footer>
-
-    </footer>
-
-    <h1 class="p-sans">Hello, World!</h1>
-    <p class="p-sans p-lead">Lorem ipsum dolor <a href="https://mainichi-panda.jp/418087.html">sit amet consectetur adipisicing</a> elit. Sint accusantium eius culpa quaerat quo dolore debitis quis odit quidem doloribus, libero iste labore odio velit quas, porro modi aut fugit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae nostrum unde pariatur, nobis odio illum esse repudiandae corrupti impedit, dolorem iusto maiores id optio. Placeat odit ipsam iste at!</p>
+<section id="home">
+    <h1 class="p-sans">Hello, Xiang Xiang!</h1>
+    <p class="p-sans p-lead"></p>This adorable photo comes from the Japanese fan-made blog Mainichi Panda. <a href="https://mainichi-panda.jp/418087.html">Click here</a> to view the blog that contains this photo. On this website, you can also see photos of herparents and younger siblings.</p>
+    <p>Xiang Xiang is a female giant panda born on June 12, 2017 through natural mating in the Ueno Zoo in Japan. Her father is Ri Ri and mother is Shin Shin.</p>
     <img src="xiangxiang.jpg" alt="image of the panda xiangxiang"/>
+</section>
+<section id="about">
+    <h2>About pandas</h2>
+    <p>The official name of the familiar black and white panda is the giant panda. Basically, they are fierce beasts like bears, but they are herbivorous and leisurely creatures that eat bamboo as their staple food.</p>
+</section>
+
+<section id="contact">
+    <h2>Contact the nearest panda</h2>
+    <p><a href="mailto:panda@example.com">Email us</a></p>
+    <p><a href="tel:+12345678">Call us</a></p>
+
+</section>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
