--- a/week2/index.html
+++ b/week2/index.html
@@ -46,7 +46,7 @@
 
 <section id="home">
     <h1 class="p-sans">Hello, Xiang Xiang!</h1>
-    <p class="p-sans p-lead"></p>This adorable photo comes from the Japanese fan-made blog Mainichi Panda. <a href="https://mainichi-panda.jp/418087.html">Click here</a> to view the blog that contains this photo. On this website, you can also see photos of herparents and younger siblings.</p>
+    <p class="p-sans p-lead">This adorable photo comes from the Japanese fan-made blog Mainichi Panda. <a href="https://mainichi-panda.jp/418087.html">Click here</a> to view the blog that contains this photo. On this website, you can also see photos of herparents and younger siblings.</p>
     <p>Xiang Xiang is a female giant panda born on June 12, 2017 through natural mating in the Ueno Zoo in Japan. Her father is Ri Ri and mother is Shin Shin.</p>
     <img src="xiangxiang.jpg" alt="image of the panda xiangxiang"/>
 </section>
