--- a/week3/index.html
+++ b/week3/index.html
@@ -3,31 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to JavaScript</title>
-    <link rel="stylesheet" href="style.css"
+    <title>Panda Xiang Xiang Gallery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <button id="btnColorChange">Change color</button>
-        <button id="btnImageToggle">Toggle image</button>
+        <h1>Panda Xiang Xiang Gallery</h1>
     </header>
 
     <main>
-        <section id="DOMoptions">
-            <h1>DOM Manipulation</h1>
+        <section id="thumbnailGallery">
+            <img src="images/panda1.jpg" class="thumbnail" alt="Thumbnail 1">
+            <img src="images/panda2.jpg" class="thumbnail" alt="Thumbnail 2">
+            <img src="images/panda3.jpg" class="thumbnail" alt="Thumbnail 3">
+            <img src="images/panda4.jpg" class="thumbnail" alt="Thumbnail 4">
         </section>
-        <section id="imageGallery">
-            <img src="images/panda1.jpg" alt ="Qute Panda">
+        <section id="imageDisplay">
+            <img src="images/panda1.jpg" id="largeImage" alt="Large Image">
         </section>
     </main>
 
     <footer>
-
     </footer>
 
-    <script src="script.js">
-    
-    </script>
-
+    <script src="script.js"></script>
 </body>
 </html>
