--- a/week5/index.html
+++ b/week5/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P5 oscillating rotation</title>
+    <link rel="stylesheet" href="styles/style.css"
 </head>
 <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.0/lib/p5.min.js"></script>
+    <script src="scripts/sketch.js"></script>
 </body>
 </html>
