--- a/week5assignment/index.html
+++ b/week5assignment/index.html
@@ -7,9 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.0/lib/p5.min.js"></script>
-    <script src="sketch.js"></script>
-    <script src="flower.js"></script>
+
+    <div class="canvas">
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.11.0/lib/p5.min.js"></script>
+        <script src="sketch.js"></script>
+        <script src="flower.js"></script>
+</div>
+    <main>
+        
+
+        <div class="step">
+            <img src="images/step1.JPG" alt="Step 1">
+            <p>1. Draw a shape in the center.</p>
+        </div>
+        <div class="step">
+            <img src="images/step2.JPG" alt="Step 2">
+            <p>2. Use sin and cos function to create wavy patterns.</p>
+        </div>
+        <div class="step">
+            <img src="images/step3.JPG" alt="Step 3">
+            <p>3. Add a new javascript to create a bunch of flowers.</p>
+        </div>
+        <div class="step">
+            <img src="images/step4.JPG" alt="Step 4">
+            <p>4. Select the "DIFFERENT" blend mode.</p>
+        </div>
+        <div class="step">
+            <img src="images/step5.JPG" alt="Step 5">
+            <p>5. Add a for loop to make the flowers rotate</p>
+        </div>
+        <div class="step">
+            <img src="images/step6.JPG" alt="Step 6">
+            <p>6. Add a small circle that moves randomly over time based on the circular track.</p>
+        </div>
+    </main>
+
 </body>
 </html>
