--- a/week5assignment/index.html
+++ b/week5assignment/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-    <div class="canvas">
+    
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.0/lib/p5.min.js"></script>
         <script src="sketch.js"></script>
         <script src="flower.js"></script>
-</div>
+
     <main>
-        
+        <div id = "sketchHolder"></div>
 
         <div class="step">
             <img src="images/step1.JPG" alt="Step 1">
