--- a/DigitalMateriality/index.html
+++ b/DigitalMateriality/index.html
@@ -96,8 +96,7 @@
             <video controls>
                 <source src="videos/v8.mp4" type="video/mp4">
             </video>  
-            <p>A slightly unsettling dotted pattern created by adjusting the Gamma value to 1 within the crystallization effect.
-            </p>
+            <p>A slightly unsettling dotted pattern created by adjusting the Gamma value to 1 within the crystallization effect.</p>
         </div>
 
         <div class="step">
@@ -108,8 +107,7 @@
             <video controls>
                 <source src="videos/v9.mp4" type="video/mp4">
             </video>  
-            <p>A growing slime mold simulation.
-            </p>
+            <p>A growing slime mold simulation.</p>
         </div>
 
         <div class="step">
@@ -120,8 +118,7 @@
             <video controls>
                 <source src="videos/v10.mp4" type="video/mp4">
             </video>  
-            <p>A kaleidoscope effect made with tile, mirror, and blur operators.
-            </p>
+            <p>A kaleidoscope effect made with tile, mirror, and blur operators.</p>
         </div>
 
         <div class="step">
@@ -132,8 +129,7 @@
             <video controls>
                 <source src="videos/v11.mp4" type="video/mp4">
             </video>  
-            <p>Some moving light spots that resemble the glowing scenes of fireflies or magic effects often seen in 90s cel animation.
-            </p>
+            <p>Some moving light spots that resemble the glowing scenes of fireflies or magic effects often seen in 90s cel animation.</p>
         </div>
 
         <div class="step">
@@ -144,8 +140,7 @@
             <video controls>
                 <source src="videos/v12.mp4" type="video/mp4">
             </video>  
-            <p>I made particles and wireframe polyhedra that move in response to audio. Building on the on-class assignment, I added a lag operator to create a glitchy, inflatable balloon effect.
-            </p>
+            <p>I made particles and wireframe polyhedra that move in response to audio. Building on the on-class assignment, I added a lag operator to create a glitchy, inflatable balloon effect.</p>
         </div>
 
         <div class="step">
@@ -156,8 +151,7 @@
             <video controls>
                 <source src="videos/v13.mp4" type="video/mp4">
             </video>  
-            <p>A tart that moves its mouth to match the input audio, as if it's talking or singing. You can also control its expressions by using the keyboard to make the corners of its mouth turn up or down.
-            </p>
+            <p>A tart that moves its mouth to match the input audio, as if it's talking or singing. You can also control its expressions by using the keyboard to make the corners of its mouth turn up or down.</p>
         </div>
 
         <div class="step">
@@ -168,8 +162,7 @@
             <video controls>
                 <source src="videos/v14.mp4" type="video/mp4">
             </video>  
-            <p>Opaque paint spreading and blending in water.
-            </p>
+            <p>Opaque paint spreading and blending in water.</p>
         </div>
 
         <div class="step">
@@ -180,8 +173,7 @@
             <video controls>
                 <source src="videos/v15.mp4" type="video/mp4">
             </video>  
-            <p>A colorful river of light trails, with the flow rate changing based on the input audio.
-            </p>
+            <p>A colorful river of light trails, with the flow rate changing based on the input audio.</p>
         </div>
 
         <div class="step">
@@ -192,8 +184,18 @@
             <video controls>
                 <source src="videos/v16.mp4" type="video/mp4">
             </video>  
-            <p>An effect created by adding blur and math operators to the previous crystallization pattern — also a bit unsettling.
-            </p>
+            <p>An effect created by adding blur and math operators to the previous crystallization pattern — also a bit unsettling.</p>
+        </div>
+
+        <div class="step">
+            <img src="images/p17.png" alt="Step 1" >
+        </div>
+
+        <div class="step2">
+            <video controls>
+                <source src="videos/v17.mp4" type="video/mp4">
+            </video>  
+            <p>An effect showing fungi or parasitic plants slowly invading a butterfly. At first, they grow around the butterfly’s outline, but eventually start "breaking in."</p>
         </div>
 
 </body>
