--- a/DigitalMateriality/index.html
+++ b/DigitalMateriality/index.html
@@ -198,5 +198,38 @@
             <p>An effect showing fungi or parasitic plants slowly invading a butterfly. At first, they grow around the butterfly’s outline, but eventually start "breaking in."</p>
         </div>
 
+        <div class="step">
+            <img src="images/p18.png" alt="Step 1" >
+        </div>
+
+        <div class="step2">
+            <video controls>
+                <source src="videos/v18.mp4" type="video/mp4">
+            </video>  
+            <p>Another banana! This time, I added a black-and-white film texture.</p>
+        </div>
+
+        <div class="step">
+            <img src="images/p19.png" alt="Step 1" >
+        </div>
+
+        <div class="step2">
+            <video controls>
+                <source src="videos/v19.mp4" type="video/mp4">
+            </video>  
+            <p>Use feedback and transform to add the spiral motion effect that appeared in the previous sketches.</p>
+        </div>
+
+        <div class="step">
+            <img src="images/p20.png" alt="Step 1" >
+        </div>
+
+        <div class="step2">
+            <video controls>
+                <source src="videos/v20.mp4" type="video/mp4">
+            </video>  
+            <p>By slightly modifying the previous effect, get a pigeon that sways to the music.</p>
+        </div>
+
 </body>
 </html>
